Fix height cutoff

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -915,12 +915,10 @@ header {
     .sidebar,
     .content {
       height: 70vh;
-      min-height: -webkit-fill-available;
     }
     .mobile-stretch {
       transition: 0s;
       margin-top: 5vh;
-      min-height: -webkit-fill-available;
       height: 50vh;
     }
     .sidebar {
